Make Meta account links editable
